fixed little icons content and alignment

--- a/css/custom.css
+++ b/css/custom.css
@@ -10,6 +10,17 @@
     font-size: 10px;
 }
 
+#fast {
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+#repairs {
+    margin-bottom: 5px;
+    margin-top: 10px;
+}
+
+
 /********** common setting **********/
 h2 {
     font-size: 2.8rem !important;
